Added background animation, cards are now smaller & centered

--- a/static/index.html
+++ b/static/index.html
@@ -1,12 +1,15 @@
 <!doctype HTML>
 <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="bg_anim.css">
     <link rel="stylesheet" type="text/css" href="card.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <script defer type="text/javascript" src="bg_anim.js"></script>
     <script defer type="text/javascript" src="git.js"></script>
     <script defer type="text/javascript" src="card.js"></script>
 </head>
 <body>
+    <canvas id='gridwormCanvas' width='10' height='10'></canvas>   
      <div class="topnav">
         <a class="nav_item" href="https://github.com/hugolz" >
             <img src="../resources/github.png" class="icon">
@@ -15,7 +18,5 @@
 
     <div>
     <div class="project_list" id="project_list">
-        <h3>Project list</h3>
-        
     </div>
 </body>
