Actual presentation text

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <link rel="stylesheet" type="text/css" href="./static/card.css">
     <link rel="stylesheet" type="text/css" href="./static/style.css">
 
-    <link rel="preconnect" href="https://api.github.com"/>.
+    <link rel="preconnect" href="https://api.github.com"/>
+    <script defer type="text/javascript" src="./static/index.js"></script>
     <script defer type="text/javascript" src="./static/bg_anim.js"></script>
     <script defer type="text/javascript" src="./static/git.js"></script>
     <script defer type="text/javascript" src="./static/card.js"></script>
@@ -18,13 +19,18 @@
     <title>Portfolio</title>
     <canvas id='gridwormCanvas' width='10' height='10'></canvas>   
      <div class="topnav">
-        <a class="nav_item" href="https://github.com/hugolz" >
+        <a class="nav_item" href="https://github.com/hugolz">
             <img src="resources/github.webp" alt="github icon" class="icon">
         </a>
     </div>
+    <p class="description">Hellow.
+        Je suis un développeur autodidacte de <label id="age"></label>, spécialisé dans le développement logiciel et backend. J'ai commencé mon parcours avec Python et aujourd'hui j'utilise principalement Rust.
+    </p>
+
 
     <div>
     <div class="project_list" id="project_list">
+        <!-- Liste de mes projets récemment mis à jour -->
     </div>
 </body>
 </html>
